{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 24,
  "lineage": "3a6e5673-b951-4a77-ed07-ac8cc5bcd1c0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-01-27T23:26:12.990-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-ngt-training/global/firewalls/firewall-1",
            "log_config": [],
            "name": "firewall-1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
            "priority": 1000,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/firewalls/firewall-1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "debian-cloud/debian-9",
                    "size": 0
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/disks/peer-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-ngt-training/zones/us-central1-a/instances/peer-vm1",
            "instance_id": "5447387310551082050",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "kqBClctcP_k=",
            "name": "peer-vm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.56.176",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/vpc-subnet-1",
                "subnetwork_project": "gcp-ngt-training"
              }
            ],
            "project": "gcp-ngt-training",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/instances/peer-vm1",
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcp-ngt-training/global/networks/vpc-net-1",
            "mtu": 0,
            "name": "vpc-net-1",
            "project": "gcp-ngt-training",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.10.0.0/23",
            "id": "projects/gcp-ngt-training/global/routes/vpc-net1-route",
            "name": "vpc-net1-route",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "projects/gcp-ngt-training/zones/us-central1-a/instances/peer-vm1",
            "next_hop_instance_zone": "us-central1-a",
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 0,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/routes/vpc-net1-route",
            "tags": [
              "peer-vm1"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-27T23:26:13.423-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/gcp-ngt-training/regions/us-central1/subnetworks/vpc-subnet-1",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "vpc-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-ngt-training",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/vpc-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}